2014-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/rquantlib.h: Moved from inst/include to avoid lower / uppercase
	clash; this header really is an internal definition header

	* inst/include/rquantlib_wrappers.h (Rcpp): Add new headers
	definition of as<> and wrap here to be read by inline / attributes plugin

	* inst/include/RQuantLib.h: Also include 'wrapper' header for converters

	* R/inline.R (inlineCxxPlugin): Plugin reads header RQuantLib.h

2014-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Added as<> and wrap conversion for QuantLib::Date

	* src/dates.cpp (advanceDate): Added simple test date function, also
	uses Rcpp Attributes as a first test case

	* inst/include/RQuantLib.h: Added and edited to allow inclusion of 
	actual rquantlib.h header via RcppExports

2014-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp (FittedBondCurve): Converted from deprecated
	FixedRateBondHelper to BondHelper with a FixedRateBond

2014-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Applied patch by Danilo Dias da Silva to support
	more calendars by adding more than two dozen new identifiers

	* man/Calendars.Rd: Updated accordingly

2014-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.12

	* man/FittedBondCurve.Rd: Test for suggested package zoo before use

2014-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* configure: Updated for Rcpp 0.11.0 and later
	* configure.in: Idem

	* src/Makevars.win: Updated for Rcpp 0.11.0 and later

	* R/inline.R (.onLoad): Set a default value of NULL for the QL libs
	and headers, and only override if either the corresponding env.vars
	are set are the quantlib-config script can be found

	* R/inline.R: Only supply LdFlags() and CFlags() results if stored
	values are non-null

2014-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): No longer need to add LdFlags() from Rcpp to
	PKG_LIBS when preparing ql_libs.