@@ -3,8 +3,13 @@
 	* src/rquantlib.h: Moved from inst/include to avoid lower / uppercase
 	clash; this header really is an internal definition header
 
-	* inst/include/rquantlib_wrappers.h (Rcpp): Add new headers
-	definition of as<> and wrap here to be read by inline / attributes plugin
+	* src/rquantlib: New as<> and wrap converters for DateVector
+
+	* inst/include/rquantlib_wrappers.h (Rcpp): Moved definition of as<>
+	and wrap for Date and DateVector here to be read by plugin; added
+	definitions for vector of dates
+
+	* src/zero.cpp: Use as<> and wrap converters for Date and DateVector
 
 	* inst/include/RQuantLib.h: Also include 'wrapper' header for converters
 
